# 4WS

./: .gitignore  1.py  CMakeLists.txt  app.py  config.json  config.yaml  requirements.txt
documents/: 3dof.md  mpc.md  mppi_cost_dynamics.md  mppi移植.md  planning.md  pts_yangluo_follow.csv  requirements.md  sim_mppi接入方案.md  低速自旋修复.md  成本函数.md
examples/: step_demo.py  three_dof_animate.py  three_dof_demo.py  three_dof_plot.py  three_dof_scenarios.py
scripts/: bench_parallel_sampling.py  convert_pts_to_plan_csv copy.py  convert_pts_to_plan_csv.py  minimal_mppi_test.py  plot_envelope.py  plot_pacejka_fx_fy.py  plot_plan_csv.py  plot_telemetry.py
scripts/mppi/: main.py  mppi_obstacle_avoider.py  util.py
src/: __init__.py  config.py  dof_utils.py  model.py  mpc.py  mpc.py.bak  mpc.py.bak2  mppi_iface.py  params.py  planner.py  sim.py  strategy.py  threedof.py  threedof_mlx.py  threedof_torch.py  tire.py  tire_mlx.py  tire_torch.py  twodof.py  twodof_mlx.py  twodof_torch.py
src/mlx_mppi/: autotune.py  autotune_global.py  autotune_qd.py  mppi.py
src/pytorch_mppi/: mppi.py
src_cpp/: CMakeLists.txt
src_cpp/include/: dof_utils.hpp  dynamics.hpp  dynamics2d.hpp  mpc.hpp  mppi.hpp  planner.hpp  vehicle.hpp
src_cpp/src/: dof_utils.cpp  dynamics.cpp  dynamics2d.cpp  mpc.cpp  mppi.cpp  planner.cpp  vehicle.cpp
src_cpp/test/: dof_utils_test.cpp  dynamics_test.cpp  mpc_test.cpp  mppi_test.cpp  planner_test.cpp  vehicle_test.cpp
tests/tests/: custom_dynamics_example.py
web/: app.js  index.html  style.css
